feat: configuração de add e editar aulas no java