@@ -4,10 +4,10 @@ import com.andre.crudspring.dto.CourseDTO;
 import com.andre.crudspring.dto.LessonDTO;
 import com.andre.crudspring.enums.Category;
 import com.andre.crudspring.model.Course;
+import com.andre.crudspring.model.Lesson;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CourseMapper {
@@ -17,8 +17,8 @@ public class CourseMapper {
             return null;
         }
         List<LessonDTO> lessons = course.getLessons().stream()
-                .map(lesson -> new LessonDTO(lesson.getId(), lesson.getName(), lesson.getYoutubeUrl()))
-                .collect(Collectors.toList());
+                .map(lesson -> new LessonDTO(lesson.getId(), lesson.getName(), lesson.getYoutubeURL()))
+                .toList();
         return new CourseDTO(course.getId(), course.getName(), course.getCategory().getValue(), lessons);
     }
 
@@ -32,6 +32,19 @@ public class CourseMapper {
         }
         course.setName(courseDTO.name());
         course.setCategory(converterCategoryValue(courseDTO.category()));
+
+        List<Lesson> lessons = courseDTO.lessons()
+                .stream()
+                .map(lessonDTO -> {
+                    var lesson = new Lesson();
+                    lesson.setId(lessonDTO._id());
+                    lesson.setName(lessonDTO.name());
+                    lesson.setYoutubeURL(lessonDTO.youtubeURL());
+                    lesson.setCourse(course);
+                    return lesson;
+                })
+                .toList();
+        course.setLessons(lessons);
         return course;
     }
 
